# WasabiPad

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build_tauri_release.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  verify.yml
assets/: make_icon.ps1
core/: Cargo.toml
core/src/: archive.rs  bookmarks.rs  buffer.rs  doc.rs  fileio.rs  hugebuf.rs  lib.rs  undo.rs  workspace_search.rs  xlstext.rs  ziptext.rs
scripts/: check-config.mjs  check-ipc-contract.mjs  check-release-version.mjs  collect-release.ps1  sync-version.mjs  version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  state.rs
ui/: api.ts  commands.test.ts  commands.ts  dialogs.ts  editor-config.ts  editor-math.test.ts  editor-math.ts  editor.ts  favbar.ts  findbar.ts  format.test.ts  format.ts  main.ts  menu.ts  path.test.ts  path.ts  prompt.ts  session.test.ts  session.ts  sidebar.ts  style.css
